--- a/bin/hospitalManagement/emerg.fxml
+++ b/bin/hospitalManagement/emerg.fxml
@@ -28,14 +28,15 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="emergencyPatientName" layoutX="198.0" layoutY="173.0" />
-      <TextField fx:id="emergencyAddress" layoutX="198.0" layoutY="217.0" />
-      <TextField fx:id="emergencyPhoneNumber" layoutX="198.0" layoutY="265.0" />
+
       <Button fx:id="emergencyConfirmed" layoutX="144.0" layoutY="345.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="19.0" prefWidth="129.0" text="Confirm">
          <font>
             <Font name="System Bold Italic" size="8.0" />
          </font>
       </Button>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Back" />
+      <Button fx:id="backButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Back" />
+      <TextField fx:id="emergencyPatientName" layoutX="213.0" layoutY="178.0" />
+      <TextField fx:id="emergencyAddress" layoutX="213.0" layoutY="222.0" />
+      <TextField fx:id="emergencyPhoneNumber" layoutX="213.0" layoutY="270.0" />
    </children>
 </AnchorPane>
